tests/ui/short-error-format.stderr
$DIR/short-error-format.rs:6:9: error[E0308]: mismatched types
$DIR/short-error-format.rs:8:7: error[E0599]: no method named `salut` found for type `u32` in the current scope
error: aborting due to 2 previous errors
